# libplist

./: config.h.meson  meson.build  meson_options.txt
include/plist/: Boolean.h  Data.h  Date.h  Integer.h  Key.h  Real.h  String.h  Structure.h  Uid.h  plist.h
libcnary/: meson.build
src/: Array.cpp  Boolean.cpp  Data.cpp  Date.cpp  Dictionary.cpp  Integer.cpp  Key.cpp  Node.cpp  Real.cpp  String.cpp  Structure.cpp  Uid.cpp  meson.build  plist.c  xplist.c
tools/: meson.build  plistutil.c
